--- a/GerenciadorDeChurrascos.Api/GerenciadorDeChurrascos.Api.csproj
+++ b/GerenciadorDeChurrascos.Api/GerenciadorDeChurrascos.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.11.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Realm" Version="5.1.2" />
   </ItemGroup>
 
 
